<resources>
    <string name="app_name">chain.i</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_application">Application</string>
    <string name="title_account">Account</string>
    <string name="title_me">Me</string>
    <string name="scan_text">Scan</string>
    <string name="title_text">Title</string>
    <string name="title_sub_login">A os of dapp for BTC、ETH、EOS</string>
    <string name="title_login">Chain.i</string>
    <string name="user_phone">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="user_phone_input_hint">Please input phone number</string>
    <string name="password_input_hint">Please input password</string>
    <string name="confirm_password_input_hint">Please confirm password</string>
    <string name="login_button">Create Wallet</string>
    <string name="add_text">Add</string>
    <string name="transfer_text">Transfer</string>
    <string name="collection_text">Collection</string>
    <string name="account_import_text">Import Account</string>
    <string name="account_add_text">Add Account</string>
    <string name="setting_text">Setting</string>
    <string name="chain_manager_text">chain manager</string>
    <string name="message_center_text">message center</string>
    <string name="suggestion_feedback_text">suggestion feedback</string>
    <string name="system_settings_text">system setting</string>
    <string name="app_update_text">app update</string>
    <string name="logout_text">logout</string>
    <string name="application_search_hint">search your application</string>

    <string name="permission_storage">Storage</string>
    <string name="permission_location">Location</string>
    <string name="permission_camera">Camera</string>
    <string name="permission_dialog_title">Start %s</string>
    <string name="permission_dialog_msg">For your normal use %s, you need the following permissions</string>
    <string name="permission_title">Please allow access to %s</string>
    <string name="permission_denied">We need access to %1$s,otherwise, you will not be able to use %2$s</string>
    <string name="permission_denied_with_naac">"Because %1$s cannot use %2$s,Can not run normally,Please open permissions before using.\n\nSetup path: Apps->%3$s->Permissions"</string>
    <string name="permission_cancel">Cancel</string>
    <string name="permission_ensure">Enter</string>
    <string name="permission_reject">Deny</string>
    <string name="permission_btn_next">Next</string>
    <string name="permission_go_to_setting">Go to Setting</string>

    <string name="WRITE_EXTERNAL_STORAGE">请开启存储写入权限  创建本地备份</string>
    <string name="SCAN_EXTERNAL_STORAGE">请开启存储读写权限  浏览图库</string>
    <string name="WRITE_STORAGE">写入存储卡</string>
    <string name="READ_STORAGE">读取存储卡</string>

    <string name="dear_user">亲爱的用户</string>
    <string name="close_permisson_toast">您关闭权限申请,如需使用请重新点击.</string>
    <string name="scanner_error_toast">暂无法识别~建议您扫描读取~</string>
    <string name="scan_code_notice">只能扫描PocketEos合作二维码</string>
    <string name="camer">照相机</string>
    <string name="open_camer_scan">请开启照相机权限  使用扫一扫功能</string>
    <string name="title_activity_scancode">Scan Code</string>

    <string name="input_password">输入密码</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="error_invalid_username">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_unmatch_password">This confirmed password is unmatch</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_account_import">AccountImportActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_token_add">TokenAddActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_token">TokenActivity</string>
</resources>
